<resources>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="textHint">Text here</string>
    <string name="msgRevice">Message Revice</string>
    <string name="msgReply">Message Reply</string>
    <string name="openWebsite">Open Website</string>
    <string name="openLocation">Open Location</string>
    <string name="shareText">Share this text</string>

    <string name="app_name1">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
        wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream
        sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="note_label_text">Note:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger
        service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favourites</string>
    <string name="action_contact">Contact</string>
    <string name="TODO">TODO</string>
    <string name="alert">Tap here to alert</string>
    <string name="btn_Alert">Alert</string>
    <string name="btnDate">Date</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title1">Cry for a Shadow</string>
    <string name="article1">Many a Beatle fanatic started down the outtake
        road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.</string>
    <string name="title2">My Bonnie - Ain’t She Sweet</string>
    <string name="article2">At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).</string>

    <!-- TODO: Remove placeholder text from fragment creation. -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Text for the fragment. -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="question_article">LIKE THE ARTICLE?</string>

    <!-- Text for the button in FragmentExample2. -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Text for the exception message in FragmentCommunicate. -->
    <string name="exception_message">must implement OnFragmentInteractionListener</string>
    <string name="question_the_song">LIKE THE SONG?</string>
    <string name="my_rating">My Rating :</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 1</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="initial_count">0</string>
    <string name="tab2">Tech you can use</string>
    <string name="tab1">These are the top stories</string>
    <string name="tab3">Cooking tip</string>
    <string name="cook">Cook</string>
    <string name="tech">Tech new</string>
    <string name="story">Top stories</string>
    <string name="title_activity_recycler">RecyclerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_mess_async">I am ready to start work!</string>
    <string name="start_task">Start Task</string>
    <string name="progessed">Awake at last after sleeping for %1$s milliseconds!</string>
    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="key_query">queryString</string>
    <string name="loading">Loading…</string>
    <string name="no_results">"No Results Found"</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="book_base">https://www.googleapis.com/books/v1/volumes?</string>
    <string name="query_param">q</string>
    <string name="max_result">maxResults</string>
    <string name="print_type">printType</string>
    <string name="item">items</string>
    <string name="volume_info">volumeInfo</string>
    <string name="title">title</string>
    <string name="authors">authors</string>
    <string name="query_string">queryString</string>

    <string name="unknown_intent_action">unknown intent action</string>
    <string name="Power_connected">Power connected!</string>
    <string name="Power_disconnected">Power disconnected!</string>
    <string name="Send_Custom_Broadcast">Send Custom Broadcast</string>
    <string name="Custom_Broadcast_Received"> Custom Broadcast Received</string>
    <string name="input_hint_name">Name</string>
    <string name="input_hint_sdt">SDT</string>
    <string name="blue_button">Blue</string>
    <string name="green_button">Green</string>
    <string name="red_button">Red</string>
    <string name="black_button">Black</string>
    <string name="default_count">0</string>
    <string name="count_button">Count</string>
    <string name="reset_button">Reset</string>
    <string name="notifyme">Notify me!</string>
    <string name="update_me">Update me!</string>
    <string name="cancel">Cancel me!</string>
    <string name="notified_msg">This is your notification text.</string>
    <string name="notified_title">You have been notified!</string>
    <string name="notified_description">Notification from Mascot</string>
    <string name="notified_update">Notification Updated!</string>
    <string name="notified_button_update_now">Update now</string>
</resources>

