<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/night_mode"
        android:title="@string/night_mode"/>

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="20"
        android:title="@string/action_favorites"
        app:showAsAction="always"
        android:icon="@drawable/ic_favourites"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_status"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />
</menu>
