<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".implicit_intents.SomeActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edit_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:hint="@string/textHint">
    </EditText>
    <Button
        android:id="@+id/btnOpenWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/openWebsite">
    </Button>
    <EditText
        android:id="@+id/edtLocaltion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:hint="@string/textHint">
    </EditText>
    <Button
        android:id="@+id/btnOpenLocaltion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/openLocation">
    </Button>
    <EditText
        android:id="@+id/edtShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:hint="@string/textHint">
    </EditText>
    <Button
        android:id="@+id/btnShareText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/shareText">
    </Button>
</LinearLayout>

