<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:src="@drawable/icecream_circle"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_16"
        android:contentDescription="@string/input_hint" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/input_hint_name"
            android:textSize="@dimen/sp_23"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_16"/>
        <TextView
            android:id="@+id/text_sdt"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_hint_sdt"
            android:gravity="end"
            android:textSize="@dimen/sp_23"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_6"/>
    </LinearLayout>

</LinearLayout>

