<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notification.NotificationActivity">

    <Button
        android:id="@+id/button_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_181"
        android:layout_marginEnd="@dimen/dp_3"
        android:text="@string/notifyme"
        app:layout_constraintEnd_toEndOf="@+id/button_updateNotify"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_updateNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_124"
        android:text="@string/update_me"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="@+id/button_cancel" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_106"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

