<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.SimpleFragment"
    android:orientation="vertical"
    android:background="@color/fragcolor">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_article"
            android:padding="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_7" />
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/radio_button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_header_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/question_the_song"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:padding="@dimen/padding_standard"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:numStars="6"
            android:rating="3.5"
            android:stepSize="0.5">
        </RatingBar>
    </LinearLayout>
</LinearLayout>

