<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartFragmentActivity">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        android:layout_marginTop="@dimen/dp_90"
        android:layout_marginLeft="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnStartFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/title1"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="288dp" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


