<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/textview_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/app_name1"
            android:textSize="@dimen/dp_24"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageView
            android:id="@+id/imageView_donut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:src="@drawable/froyo_circle"
            android:onClick="showDonutOrder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_intro" />
        <ImageView
            android:id="@+id/imageView_iceCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:src="@drawable/icecream_circle"
            android:onClick="showIceCreamOrder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_donut" />

        <ImageView
            android:id="@+id/imageView_froyo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:src="@drawable/donut_circle"
            android:onClick="showFroyoOrder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_iceCream"
            />

        <TextView
            android:id="@+id/textview_donutDescription"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/froyo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_donut"
            app:layout_constraintTop_toTopOf="@+id/imageView_donut" />

        <TextView
            android:id="@+id/ice_cream_description"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/ice_cream_sandwiches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_iceCream"
            app:layout_constraintTop_toTopOf="@+id/imageView_iceCream" />

        <TextView
            android:id="@+id/froyo_description"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/donuts"
            app:layout_constraintStart_toEndOf="@+id/imageView_froyo"
            app:layout_constraintTop_toTopOf="@+id/imageView_froyo" />
</androidx.constraintlayout.widget.ConstraintLayout>